--- a/views/login_layout.jade
+++ b/views/login_layout.jade
@@ -26,7 +26,7 @@ html
                         span.sr-only Toggle navigation
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href="/") KC Risk
+                    a.navbar-brand(href="/") OPD Service_Time
 
 
         .container
@@ -44,9 +44,9 @@ html
                         span.sr-only Toggle navigation
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href="/") KC Risk
+                    a.navbar-brand(href="/") OPD ST.
                 p.navbar-text.navbar-right
-                    | โปรแกรมความเสี่ยง @ ศูนย์ข้อมูล โรงพยาบาลกันทรวิชัย จังหวัดมหาสารคาม
+                    | โปรแกรมระยะเวลารอคอย OPD @ ศูนย์ข้อมูล โรงพยาบาลกันทรวิชัย จังหวัดมหาสารคาม
 
 
 
