--- a/views/admin_layout.jade
+++ b/views/admin_layout.jade
@@ -51,7 +51,7 @@ html
                         span.icon-bar
                     a.navbar-brand(href="/opd")
                         i.fa.fa-spinner.fa-pulse.fa-2x.fa-fw
-                        | &nbsp; OPD Service
+                        | &nbsp; OPD Service_Time
                 #navbar.navbar-collapse.collapse
                     ul.nav.navbar-nav.pull-right
                         .btn-group
