--- a/views/page/opd.jade
+++ b/views/page/opd.jade
@@ -209,8 +209,10 @@ block content
                                 input#Date_Report_normal2.form-control(type='text')
                                 span.input-group-addon
                                     span.glyphicon.glyphicon-calendar
+                            | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            button#btnReport_normal(type="button").btn.btn-primary.btn-sm ส่งออก
                 | &nbsp;
-                .row
+                //.row
                     .col-md-12
                             label จำนวนข้อมูล
                             | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -247,8 +249,9 @@ block content
                                 span.input-group-addon
                                     span.glyphicon.glyphicon-calendar
                             | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            button#btnReport_special(type="button").btn.btn-primary.btn-sm ส่งออก
                 | &nbsp;
-                .row
+                //.row
                     .col-md-12
                         label จำนวนข้อมูล
                         | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
