--- a/views/page/opd.jade
+++ b/views/page/opd.jade
@@ -75,21 +75,39 @@ block content
                             tr
                                 td ห้องบัตร
                                 td(style="width : 120px")
-                                    input#txtVsttime_card(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtVsttime_card(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                                 td(style="width : 120px")
-                                    input#txtFinish_card(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtFinish_card(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                             tr
                                 td ซักประวัติ
                                 td(style="width : 120px")
-                                    input#txtVsttime_screen(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtVsttime_screen(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                                 td(style="width : 120px")
-                                    input#txtFinish_screen(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtFinish_screen(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                             tr
                                 td พบแพทย์
                                 td(style="width : 120px")
-                                    input#txtVsttime_doctor(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtVsttime_doctor(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                                 td(style="width : 120px")
-                                    input#txtFinish_doctor(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtFinish_doctor(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                             tr#case_special
                                 td
                                     .col-md-12
@@ -103,39 +121,75 @@ block content
                                                 tr
                                                     td Lab
                                                     td(style="width : 120px")
-                                                        input#txtVsttime_lab(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtVsttime_lab(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                     td(style="width : 120px")
-                                                        input#txtFinish_lab(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtFinish_lab(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                 tr
                                                     td X-ray
                                                     td(style="width : 120px")
-                                                        input#txtVsttime_xray(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtVsttime_xray(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                     td(style="width : 120px")
-                                                        input#txtFinish_xray(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtFinish_xray(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                 tr
                                                     td EKG
                                                     td(style="width : 120px")
-                                                        input#txtVsttime_ekg(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtVsttime_ekg(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                     td(style="width : 120px")
-                                                        input#txtFinish_ekg(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtFinish_ekg(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                 tr
                                                     td อื่นๆ
                                                     td(style="width : 120px")
-                                                        input#txtVsttime_other(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtVsttime_other(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                                                     td(style="width : 120px")
-                                                        input#txtFinish_other(type="time").form-control.css-require
+                                                        .input-group(data-timepicker)
+                                                            input#txtFinish_other(type="text").form-control.css-require
+                                                            span.input-group-addon
+                                                                span.glyphicon.glyphicon-time
                             tr
                                 td ให้คำแนะนำ/รับใบนัด/ใบส่งต่อ
                                 td(style="width : 120px")
-                                    input#txtVsttime_appointment(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtVsttime_appointment(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                                 td(style="width : 120px")
-                                    input#txtFinish_appointment(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtFinish_appointment(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                             tr
                                 td รับยา
                                 td(style="width : 120px")
-                                    input#txtVsttime_drugs(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtVsttime_drugs(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
                                 td(style="width : 120px")
-                                    input#txtFinish_drugs(type="time").form-control.css-require
+                                    .input-group(data-timepicker)
+                                        input#txtFinish_drugs(type="text").form-control.css-require
+                                        span.input-group-addon
+                                            span.glyphicon.glyphicon-time
             button(type="button").btn.btn-primary#btnSave บันทึก
     .panel.panel-primary#Block_Search
         .panel-heading
