--- a/views/page/opd.jade
+++ b/views/page/opd.jade
@@ -374,21 +374,39 @@ block content
                                     tr
                                         td ห้องบัตร
                                         td(style="width : 120px")
-                                            input#txtVsttime_card2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtVsttime_card2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                         td(style="width : 120px")
-                                            input#txtFinish_card2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtFinish_card2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                     tr
                                         td ซักประวัติ
                                         td(style="width : 120px")
-                                            input#txtVsttime_screen2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtVsttime_screen2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                         td(style="width : 120px")
-                                            input#txtFinish_screen2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtFinish_screen2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                     tr
                                         td พบแพทย์
                                         td(style="width : 120px")
-                                            input#txtVsttime_doctor2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtVsttime_doctor2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                         td(style="width : 120px")
-                                            input#txtFinish_doctor2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtFinish_doctor2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                     tr
                                         td
                                             .col-md-12
@@ -402,39 +420,75 @@ block content
                                                         tr
                                                             td Lab
                                                             td(style="width : 120px")
-                                                                input#txtVsttime_lab2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtVsttime_lab2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                             td(style="width : 120px")
-                                                                input#txtFinish_lab2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtFinish_lab2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                         tr
                                                             td X-ray
                                                             td(style="width : 120px")
-                                                                input#txtVsttime_xray2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtVsttime_xray2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                             td(style="width : 120px")
-                                                                input#txtFinish_xray2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtFinish_xray2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                         tr
                                                             td EKG
                                                             td(style="width : 120px")
-                                                                input#txtVsttime_ekg2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtVsttime_ekg2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                             td(style="width : 120px")
-                                                                input#txtFinish_ekg2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtFinish_ekg2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                         tr
                                                             td อื่นๆ
                                                             td(style="width : 120px")
-                                                                input#txtVsttime_other2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtVsttime_other2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                                             td(style="width : 120px")
-                                                                input#txtFinish_other2(type="time").form-control.css-require
+                                                                .input-group(data-timepicker)
+                                                                    input#txtFinish_other2(type="text").form-control.css-require
+                                                                    span.input-group-addon
+                                                                        span.glyphicon.glyphicon-time
                                     tr
                                         td ให้คำแนะนำ/รับใบนัด/ใบส่งต่อ
                                         td(style="width : 120px")
-                                            input#txtVsttime_appointment2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtVsttime_appointment2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                         td(style="width : 120px")
-                                            input#txtFinish_appointment2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtFinish_appointment2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                     tr
                                         td รับยา
                                         td(style="width : 120px")
-                                            input#txtVsttime_drugs2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtVsttime_drugs2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                                         td(style="width : 120px")
-                                            input#txtFinish_drugs2(type="time").form-control.css-require
+                                            .input-group(data-timepicker)
+                                                input#txtFinish_drugs2(type="text").form-control.css-require
+                                                span.input-group-addon
+                                                    span.glyphicon.glyphicon-time
                 .modal-footer
                     button.btn.btn-primary#btnEdit
                         i.fa.fa-save
